<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dev_http_capture_include_tab_bg_color"
    android:baselineAligned="false"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/vid_data_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dev_http_capture_include_tab_container_padding_left"
        android:paddingTop="@dimen/dev_http_capture_include_tab_container_padding_top"
        android:paddingRight="@dimen/dev_http_capture_include_tab_container_padding_right"
        android:paddingBottom="@dimen/dev_http_capture_include_tab_container_padding_bottom">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:text="@string/dev_http_capture_options_data"
            android:textColor="@color/dev_http_capture_include_tab_title_text_color"
            android:textSize="@dimen/dev_http_capture_include_tab_title_text_size" />

        <TextView
            android:id="@+id/vid_data_type_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dev_http_capture_include_tab_options_margin_top"
            android:drawableRight="@drawable/dev_http_capture_icon_sort_arrow"
            android:drawablePadding="@dimen/dev_http_capture_include_tab_options_drawable_padding"
            android:ellipsize="end"
            android:gravity="center"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:textColor="@color/dev_http_capture_include_tab_options_text_color"
            android:textSize="@dimen/dev_http_capture_include_tab_options_text_size"
            tools:text="@string/dev_http_capture_data_type_all" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/vid_group_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dev_http_capture_include_tab_container_padding_left"
        android:paddingTop="@dimen/dev_http_capture_include_tab_container_padding_top"
        android:paddingRight="@dimen/dev_http_capture_include_tab_container_padding_right"
        android:paddingBottom="@dimen/dev_http_capture_include_tab_container_padding_bottom">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:text="@string/dev_http_capture_options_group"
            android:textColor="@color/dev_http_capture_include_tab_title_text_color"
            android:textSize="@dimen/dev_http_capture_include_tab_title_text_size" />

        <TextView
            android:id="@+id/vid_group_type_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dev_http_capture_include_tab_options_margin_top"
            android:drawableRight="@drawable/dev_http_capture_icon_sort_arrow"
            android:drawablePadding="@dimen/dev_http_capture_include_tab_options_drawable_padding"
            android:ellipsize="end"
            android:gravity="center"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:textColor="@color/dev_http_capture_include_tab_options_text_color"
            android:textSize="@dimen/dev_http_capture_include_tab_options_text_size"
            tools:text="@string/dev_http_capture_group_type_time" />
    </LinearLayout>
</LinearLayout>